syntax = "proto3";

package com.project.app.moneypal.foundation.datasource.preference.model;

message CredentialPreference {
  string token = 1;
}
