syntax = "proto3";

package com.project.app.moneypal.foundation.datasource.preference.model;

message LanguagePreference {
  string code = 1;
}
