syntax = "proto3";

package com.project.app.moneypal.foundation.datasource.preference.model;

message ThemePreference {
  string value = 1;
}
