syntax = "proto3";

package com.project.app.moneypal.foundation.datasource.preference.model;

message UserPreference {
  string email = 1;
}
